@@ -1,3 +1,9 @@
+Sun Aug 31 21:35:16 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* eval.c (DumpPosition): add position ID and match ID to
+	the "eval" output.
+	(suggested by Hugh Sconyers)
+
 Sun Aug 31 16:13:02 2003 GMT  Holger Bochnig <hbgg@gmx.net>
 
 	* gtkchequer.c (UpdateMoveList): didn't compile with USE_OLD_LAYOUT,
